--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,11 @@ protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.31.0
 requests-oauthlib==2.0.0
 rsa==4.9
+six==1.16.0
 uritemplate==4.1.1
 urllib3==2.2.1
