--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+beautifulsoup4==4.12.3
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -9,6 +10,7 @@ google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.63.0
 httplib2==0.22.0
 idna==3.7
+O365==2.0.34
 oauthlib==3.2.2
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -16,10 +18,15 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 requests==2.31.0
 requests-oauthlib==2.0.0
 rsa==4.9
 six==1.16.0
+soupsieve==2.5
+stringcase==1.2.0
+tzdata==2024.1
+tzlocal==5.2
 uritemplate==4.1.1
 urllib3==2.2.1
